[package]
name = "crab"
version = "0.1.0"
edition = "2024"
[lib]
path = "src/lib.rs"

[[bin]]
name = "crab"
path = "src/main.rs"
required-features = ["bin"]

[dependencies]
async-trait = "0.1.89"
bincode-next = { version = "2.1.0", features = ["serde"] }
binrw = "0.15.1"
log = "0.4.32"
logforth = { version = "0.30.1", features = ["starter-log"], optional = true }
quinn = { version = "0.11.9", default-features = false, features = ["rustls-aws-lc-rs", "runtime-tokio"] }
rustls = { version = "0.23.40", default-features = false, features = ["aws-lc-rs"] }
rustls-native-certs = "0.8.3"
rustls-pemfile = "2.2.0"
serde = { version = "1.0.228", features = ["derive", "rc"] }
thiserror = "2.0.18"
tokio = { version = "1.52.2", features = ["rt-multi-thread", "macros", "signal", "fs", "io-util"] }
tokio-util = { version = "0.7.18", features = ["io"] }
toml = "1.1.2"
bytes = "1.11.1"
sysinfo = { version = "0.39.3", optional = true }
axum = { version = "0.8.9", optional = true }
dashmap = { version = "6.2.1", optional = true }
futures-util = { version = "0.3.32", optional = true }
hyper = { version = "1.10.1", features = ["http1", "http2", "client"], optional = true }
hyper-util = { version = "0.1.20", features = ["client-legacy", "http1", "http2"], optional = true }
hyper-rustls = { version = "0.27.9", features = ["http1", "http2", "rustls-native-certs", "aws-lc-rs"] }
[features]
default = []
bin = ["logforth", "sysinfo", "axum", "dashmap", "futures-util", "hyper", "hyper-util"]
